--- a/front/package.json
+++ b/front/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "export": "next export",
     "start": "next start",
+    "deploy": "git subtree push --prefix out origin gh-pages",
     "lint": "next lint"
   },
   "dependencies": {
